Bug 426991 -  Form submission extremely slow on large forms (with form Form history turned on). r=sdwilsh, r=gavin